Fixed modify button spacing

--- a/pages/edificio-b/edificio/styles.css
+++ b/pages/edificio-b/edificio/styles.css
@@ -81,6 +81,10 @@ html {
     border-radius: 1.5vh;
 }
 
+.modify-container {
+    margin-bottom: 3vh;
+}
+
 .modify-button {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
@@ -107,7 +111,7 @@ html {
     font-size: 2vh;
     font-weight: 600;
     margin-top: 1vh;
-    margin-bottom: 4vh;
+    margin-bottom: 1vh;
 }
 
 button {
